--- a/public/index.html
+++ b/public/index.html
@@ -7,26 +7,26 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" rel="stylesheet">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <!-- Primary Meta Tags -->
-    <title>Green IT</title>
-    <meta name="title" content="Green IT" />
+
+   <!-- Primary Meta Tags -->
+    <title>GreenIT</title>
+    <meta name="title" content="GreenIT" />
     <meta name="description" content="Best Solution Company" />
-    <meta name="keywords" content="green it greenit si it company" />
-    <meta name="author" content="itGateway" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://metatags.io/" />
-    <meta property="og:title" content="Green IT" />
+    <meta property="og:title" content="GreenIT" />
     <meta property="og:description" content="Best Solution Company" />
-    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+    <meta property="og:image" content="https://greenitmm.com/favicon.ico" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://metatags.io/" />
-    <meta property="twitter:title" content="Green IT" />
+    <meta property="twitter:title" content="GreenIT" />
     <meta property="twitter:description" content="Best Solution Company" />
-    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+    <meta property="twitter:image" content="https://greenitmm.com/favicon.ico" />
+
 
     <!-- Meta Tags Generated with https://metatags.io -->
 
